--- a/.env.example.dev
+++ b/.env.example.dev
@@ -73,7 +73,7 @@ USER_DB_EXPOSE_PORT=5437
 # Redis Configuration
 REDIS_HOST=redis
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=redis_password
 REDIS_EXPOSE_PORT=6379
 
 # Database General
